relative path to stylesheet

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Uniqly Product Details</title>
   <link href="https://fonts.googleapis.com/css?family=Yantramanav:900" rel="stylesheet">
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
 <div class="product-images" id="product-images"></div>
