--- a/client/index.html
+++ b/client/index.html
@@ -3,11 +3,11 @@
 <head>
   <title>Uniqly Product Details</title>
   <link href="https://fonts.googleapis.com/css?family=Yantramanav:900" rel="stylesheet">
-  <link rel="stylesheet" href="http://localhost:3003/style.css"/>
+  <link rel="stylesheet" href="/style.css"/>
 </head>
   <body>
     <div class="product-images" id="product-images"></div>
     <div class="product-details" id="product-details"></div>
-    <script type="text/javascript" src="http://localhost:3003/bundle.js"></script>
+    <script type="text/javascript" src="/bundle.js"></script>
   </body>
 </html>
